tests/negative/resource_runtime_asset_address_domain.ora
contract ResourceRuntimeAssetAddressDomain {
    storage var balances: map<address, Resource<msg.sender>>;
}
